<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_incidencias"
        android:icon="@drawable/ic_baseline_warning_24"
        android:title="@string/title_incidencias" />

    <item
        android:id="@+id/navigation_facturas"
        android:icon="@drawable/ic_baseline_sticky_note_2_24"
        android:title="@string/title_facturas" />

    <item
        android:id="@+id/navigation_principal"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_principal" />
    <item
        android:id="@+id/navigation_perfil"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/title_perfil" />

</menu>